# Cpp_ML

./: CMakeLists.txt  README.md
mnist_ml/: CMakeLists.txt
mnist_ml/app/: main.cpp
mnist_ml/include/: data.hpp  data_handler.hpp  knn.hpp  setter.hpp
mnist_ml/src/: data.cpp  data_handler.cpp  knn.cpp  setter.cpp
